[tool.poetry]
name = "max17205"
version = "0.1.0"
description = ""
authors = ["Frederik Aalund <fpa@sbtinstruments.com>"]

[tool.poetry.dependencies]
python = "^3.9"
anyio = "^3.5.0"
rich = "^11.2.0"
asyncssh = "^2.9.0"
plotext = "^4.2.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
